tests/parsing/cmc/errors/161.expected
File "tests/parsing/cmc/errors/161.cmc", line 1, character 41-47:
1 | (check-system sys :reachable (r (= 1 1)) :trans)
                                             ^^^^^^
Error while parsing a check system command definition,
      read the reserved word ':trans',
      but expected a system query keyword (:reachable, :query or :queries) or
      a closing parenthesis.
